minio/k8s/ingress-route-minio-operator.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-operator-console
  namespace: minio-operator
spec:
  entryPoints:
    - web
    - websecure
  tls: 
    secretName: ingress-cert-env0-minio
  routes:
    # - match: Host(`env0.luojm.com`) && Path(`/k8s`)
    # - match: Host(`env0.luojm.com`) && PathPrefix(`/k8s`)
    - match: Host(`minio.env0.luojm.com`) 
      kind: Rule
      # middlewares:
      # - name: stripprefix-k8s
      #   namespace: kubernetes-dashboard
      # - name: https-only
      #   namespace: kubernetes-dashboard
      # - name: add-slash
      #   namespace: kubernetes-dashboard
      services:
      - name: console
        kind: Service
        namespace: minio-operator
        port: 9090
